# message-board

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: on_push_main.yaml
app/: config.py  dependencies.py  lifespan.py  main.py
app/models/: __init__.py  board.py  database.py  post.py  post_edit.py  thread.py
app/routers/: boards.py  pages.py  posts.py  threads.py
app/schemas/: board.py  post.py  thread.py
app/services/: board_service.py  post_service.py  thread_service.py
app/static/: style.css
app/templates/: 404.html  base.html  board.html  index.html  thread.html
app/templates/components/: edit_history.html  load_more_posts.html  load_more_threads.html  post.html  thread_expanded.html  thread_preview.html
scripts/: mock_data.py
